# mitte

./: .gitignore  Cargo.toml  README.org
doc/: settings.html  source-files.js
doc/implementors/core/fmt/: trait.Debug.js  trait.Display.js
doc/implementors/core/marker/: trait.Freeze.js  trait.Send.js  trait.Sync.js
doc/implementors/core/panic/unwind_safe/: trait.RefUnwindSafe.js
doc/implementors/serde/de/: trait.Deserialize.js
doc/implementors/std/error/: trait.Error.js
doc/mitte/: all.html
doc/mitte/agent/: struct.AgentDescription.html
doc/mitte/error/: index.html  sidebar-items.js
doc/src/mitte/: agent.rs.html  lib.rs.html
docs/: crates.js  search-index.js
docs/implementors/core/clone/: trait.Clone.js
docs/implementors/core/cmp/: trait.Eq.js  trait.PartialEq.js
docs/implementors/core/marker/: trait.Unpin.js
docs/implementors/core/panic/unwind_safe/: trait.UnwindSafe.js
docs/implementors/serde/ser/: trait.Serialize.js
docs/mitte/: index.html  sidebar-items.js  struct.Agent.html  struct.AgentDescription.html
docs/mitte/agent/: struct.Agent.html
docs/mitte/error/: enum.MitteError.html
docs/src/mitte/: agent.rs.html  error.rs.html
src/: agent.rs  debug.rs  error.rs  lib.rs  main.rs
