[package]
name = "mitte"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[profile.dev.package.num-bigint-dig]
opt-level = 3

[dependencies]
serde = { version = "1.0.130", features = ["derive"] }
bincode = "1.3.3"
rsa = { version = "0.5.0", features = ["std", "pem", "alloc", "serde"] }
rand = "0.8.4"
sha2 = "0.10.0"
